--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,7 @@ header a {
     color: #000;
     font-size: 15px;
     border-radius: 15px;
+    height: 550px;
 }
 
 .close {
@@ -381,6 +382,7 @@ header a {
     color: #000;
     font-size: 15px;
     border-radius: 15px;
+    height: 495px;
 }
 
 .close {
