--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
     background-color: #000;
     color: #eee;
     font-size: 12px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    
+
 }
  
 header {
@@ -32,8 +37,10 @@ header a {
 .container {
     height: 100vh;
     width: 100vw;
-    margin-top: -50px;
+    margin-top: 2px;
     overflow: hidden;
+    box-sizing: border-box;
+    margin-right: 750px;
 }
  
 .container .list .list-item {
@@ -52,7 +59,7 @@ header a {
 
 .container .list .list-item .content {
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 125px;
     padding-right: 30%;
     width: 80%;
@@ -121,7 +128,7 @@ header a {
     width: 135px;
     height: 200px;
     position: relative;
-    z-index: 3;
+    
 }
 
 .container .thumb .thumb-item img {
@@ -346,6 +353,7 @@ header a {
     height: 550px;
 }
 
+
 .close {
     color: #aaa;
     float: right;
@@ -446,10 +454,15 @@ header a {
 }
 
 
-.container .list .list-item:nth-last-child(1) .content .topicos {
+.container .list .list-item:nth-last-child(1)
+.content .topicos {
     animation-delay: 1.6s;
 }
-.container .list .list-item:nth-last-child(1) .content .title, .container .list .list-item:nth-last-child(1) .content .topicos, .container .list .list-item:nth-last-child(1) .content .buttons {
+
+.container .list .list-item:nth-last-child(1) 
+.content .title, .container .list .list-item:nth-last-child(1) 
+.content .topicos, .container .list .list-item:nth-last-child(2) 
+.content .buttons {
     transform: translateY(50px);
     filter: blur(20px);
     opacity: 0;
@@ -461,6 +474,34 @@ header a {
     margin-top: 20px;
 }
 
-.brele{
+.brele {
     color: #aaa;
 }
+
+
+.tituloesp{
+    margin-left: 245px;
+    font-size: large;
+}
+
+.titulorele{
+    margin-left: 245px;
+}
+
+.accordion{
+    --bs-accordion-btn-bg: #ffffff;
+    --bs-accordion-active-bg: #ffffff;
+    --bs-accordion-active-color:#000;
+    --bs-accordion-btn-focus-box-shadow: none;
+    --bs-accordion-bg: #ffffff;
+    --bs-accordion-color:#000
+}   
+
+.titulodiagrama{
+    margin-bottom: 245px;
+}
+
+a{
+    text-decoration: none
+}
+
