--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header a {
 
 .container .list .list-item img {
     object-fit: cover;
-    filter: brightness(50%);
+    filter: brightness(75%);
     
 }
 
@@ -505,3 +505,32 @@ a{
     text-decoration: none
 }
 
+
+.modal5 {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content5 {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 800px;
+    border-radius: 15px;
+    height: 450px;
+}
+
+.camvasimg{
+    width: 700px;
+    height: 390px;
+    border-radius: 15px;
+    filter: brightness(5%);
+}
